--- a/dkvnpfkjfdffjspcmsp.html
+++ b/dkvnpfkjfdffjspcmsp.html
@@ -27,7 +27,7 @@
     </style>
     <script>
         function calculateDays() {
-            const issued = false;  // Set this to true to freeze the count
+            const issued = true;  // Set this to true to freeze the count
 
             const startDate = new Date("2023-09-12");
             let currentDate = new Date();
