--- a/sjkkddkjnwk38383nk.html
+++ b/sjkkddkjnwk38383nk.html
@@ -30,10 +30,10 @@
             const issued = false;  // Set this to true to freeze the count
 
             const startDate = new Date("2023-08-30");
-            let currentDate = new Date();
+            let currentDate = new Date("2024-09-09");
 
             if (issued) {
-                currentDate = new Date("2024-09-09"); // You can set the date you want the count to freeze at
+                currentDate = new Date(); // You can set the date you want the count to freeze at
             }
 
             const timeDifference = currentDate - startDate;
